# Auction-Scraper

./: README.md  app.py  pyproject.toml
src/fast_auction_research___speed_optimized/: crew.py  main.py
src/fast_auction_research___speed_optimized/config/: agents.yaml  tasks.yaml  tasks_1a.yaml  tasks_1b.yaml  tasks_page_extraction.yaml  tasks_research.yaml  tasks_synthesis.yaml  tasks_validation.yaml
