[project]
name = "fast_auction_research___speed_optimized"
version = "0.1.0"
description = "fast_auction_research___speed_optimized using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.9.3",
    "firecrawl-py",
    "streamlit",
    "python-dotenv",
    "pandas",
]

[project.scripts]
fast_auction_research___speed_optimized = "fast_auction_research___speed_optimized.main:run"
run_crew = "fast_auction_research___speed_optimized.main:run"
train = "fast_auction_research___speed_optimized.main:train"
replay = "fast_auction_research___speed_optimized.main:replay"
test = "fast_auction_research___speed_optimized.main:test"
run_with_trigger = "fast_auction_research___speed_optimized.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
